# github-crawler

./: .gitignore  README.md  _config.conf  github-api.cabal  github-crawler.cabal  stack.yaml
src/: Client.hs  Commit.hs  Followers.hs  Lib.hs  RepoInfoClient.hs  TotalCommit.hs
