name:                github-crawler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sneaker-rohit/github-crawler#readme
license:             BSD3
license-file:        LICENSE
author:              Vuong Nguyen
maintainer:          vuongnq.09@gmail.com
copyright:           2016 Vuong Nguyen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , aeson >= 0.7 && < 1.1
                       , base-compat
                       , github
                       , text
                       , transformers >= 0.3 && < 0.6
                       , http-client >= 0.4.18.1 && < 0.6
                       , wai
                       , warp
                       , servant == 0.9.*
                       , servant-server == 0.9.*
                       , servant-client == 0.9.*
                       , wai-logger
                       , hslogger
                       , time
                       , mtl
                       , bytestring
  default-language:    Haskell2010

executable github-crawler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , github-crawler
  default-language:    Haskell2010

test-suite github-crawler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , github-crawler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sneaker-rohit/github-crawler